--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.7.4</version>
+        </dependency>
     </dependencies>
 
     <build>
